# anatase

./: Cargo.toml  README.md  test.an
anatase/: Cargo.toml
anatase/src/: bytecode.rs  garbage_collector.rs  lib.rs  main.rs  runtime.rs
anatase_asm/: Cargo.toml
anatase_asm/src/: codegen.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic_anal.rs
anatase_common/: Cargo.toml
crates/archiver/: Cargo.toml
